# openclaw

extensions/discord-voice/: index.ts  openclaw.plugin.json  package.json
extensions/discord-voice/sidecar/: pyproject.toml
extensions/discord-voice/sidecar/src/openclaw_voice/: __init__.py  __main__.py  discord_voice.py  ipc_server.py  stt_client.py  tts_client.py
extensions/discord-voice/src/: core-bridge.ts  ipc-types.ts  voice-bridge.ts  voice-session.ts
